manipulacion de API

--- a/mi_app/src/app/app.component.html
+++ b/mi_app/src/app/app.component.html
@@ -4,8 +4,8 @@
 </style>
 
 <main class="main">
-  <app-my-component></app-my-component>
+  <app-character-component></app-character-component>
 </main>
 
 
-<router-outlet />
+
